--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ h1 {
     margin: 0;
     font-size: 2rem;
     padding-left: 150px;
-    text-align: center; /* Centraliza o título por padrão */
+    text-align: center; /* Centraliza o título */
+    width: 100%; /* Garante que o título ocupe toda a largura disponível */
 }
 
 /* Seções */
@@ -173,8 +174,9 @@ input[type="file"] {
 
     h1 {
         font-size: 1.5rem;
-        padding-left: 0; /* Remove o padding à esquerda para melhor ajuste */
-        text-align: center; /* Centraliza o título nas telas menores */
+        padding-left: 0; /* Remove o padding à esquerda */
+        text-align: center; /* Garante que o título seja centralizado */
+        width: 100%; /* Garante que o título ocupe toda a largura disponível */
     }
 
     .produto-item {
@@ -186,6 +188,7 @@ input[type="file"] {
     h1 {
         font-size: 1.2rem;
         padding-left: 0; /* Remove o padding à esquerda */
+        text-align: center; /* Centraliza o título */
     }
 
     input, button {
